# superman

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Ideas.md  README.md  api.html  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  src.array.dense.html  src.array.html  src.array.linalg.html  src.array.sparse.html  src.backend.html  src.data.html  src.geometry.density.html  src.geometry.embedding.html  src.geometry.html  src.geometry.matrix.html  src.html  src.io.html  src.linalg.html  src.model.html  src.object.html  src.sampling.html  src.storage.html  src.utils.html  src.visualization.html  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  introduction.doctree  modules.doctree  src.array.dense.doctree  src.array.doctree  src.array.linalg.doctree  src.array.sparse.doctree  src.backend.doctree  src.data.doctree  src.doctree  src.geometry.density.doctree  src.geometry.doctree  src.geometry.embedding.doctree  src.geometry.matrix.doctree  src.io.doctree  src.linalg.doctree  src.model.doctree  src.object.doctree  src.sampling.doctree  src.storage.doctree  src.utils.doctree  src.visualization.doctree  usage.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: api.rst.txt  index.rst.txt  src.array.dense.rst.txt  src.array.rst.txt  src.backend.rst.txt  src.geometry.embedding.rst.txt  src.linalg.rst.txt  src.object.rst.txt  src.rst.txt  src.storage.rst.txt
docs/: Makefile
docs/source/: api.rst  conf.py  introduction.rst  src.array.linalg.rst  src.geometry.matrix.rst  src.geometry.rst  src.io.rst  src.linalg.rst  src.model.rst  src.object.rst  src.sampling.rst  usage.rst
scripts/: embedding_with_distortion.ipynb  laplacian_embedding.ipynb
source/: src.array.sparse.rst  src.data.rst  src.geometry.density.rst  src.geometry.rst
src/array/: __init__.py  array.py  base.py  dense.py  dense_base.py  sparse.py  sparse_base.py  typing.py
src/backend/: __init__.py  backend.py  numpy.py
src/data/: __init__.py  load_data.py
src/geometry/: __init__.py  density.py  eigen_system.py  embedding_system.py  normalize.py  points.py
src/linalg/: __init__.py  covariance.py  func.py  rmetric.py
src/model/: __init__.py  diffusion_maps.py  embedding.py  laplacian_eigenmaps.py  spectral_embedding.py
tests/: points-30x30_float_2.npy  points-5x10_float_1.npy  test_objects.py  test_utils.py
(+72 files in other folders)
