[tool.poetry]
name = "superman"
version = "0.1.0"
description = "Efficient Manifold Learning Package"
authors = ["ovmurad <ovmurad@cs.washington.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.0"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
pytest = "^8.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
