[tool.poetry]
name = "superman"
version = "0.1.0"
description = "Efficient Manifold Learning Package"
authors = ["ovmurad <ovmurad@cs.washington.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
scipy = "^1.16.0"
scipy-stubs = "^1.16.0.2"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
ruff = "^0.12.3"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
sphinx = "^8.2.3"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
lint.extend-select = ["I"]
line-length = 88
src = ["src"]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poetry.extras]
docs = ["sphinx"]
